# gh-notifier

./: AGENTS.md  Cargo.toml  README.md  config_example.toml
backlog/: config.yml
backlog/docs/: doc-1 - GitHub通知リアルタイムデスクトップ通知デーモン仕様書.md
backlog/tasks/: task-1 - AuthManager-コンポーネントの基本構造を実装.md  task-10 - デスクトップ通知機能（Notifier）の実装.md  task-10.1 - 通知送信機能（Linux対応）.md  task-10.2 - 通知送信機能（macOS対応）.md  task-10.3 - 通知送信機能（Windows対応）.md  task-10.4 - 通知クリック時のURL開機能.md  task-11 - 状態管理（StateManager）の実装.md  task-12 - ログ初期化（Logger）の実装.md  task-13 - メインイベントループと終了処理（Main-Event-Loop）の実装.md  task-13.1 - Pollerを非同期タスクとして起動する処理.md  task-13.2 - シグナル（SIGINT-SIGTERM）をキャッチして終了する処理.md  task-13.3 - 終了前に状態保存（StateManager）を実行.md  task-14 - 永続的デスクトップ通知機能の実装-設定項目追加.md  task-15 - 永続的デスクトップ通知機能の実装-通知処理修正.md  task-16 - 永続的デスクトップ通知機能の実装-設定例更新.md  task-17 - 永続的デスクトップ通知機能の実装-ドキュメント更新.md  task-18 - 永続的デスクトップ通知機能の実装-テスト追加.md  task-19 - 通知データ永続化と永続的デスクトップ通知機能-データストレージと通知永続化の設計と実装.md  task-2 - GitHub-OAuth-Device-Flow-API-との通信機能を実装.md  task-20 - 通知データ永続化機能-通知履歴管理システムの実装.md  task-21 - 通知データ永続化機能-未読通知トラッキング機能の実装.md  task-22 - 通知データ永続化機能-ユーザーインターフェースの実装.md  task-23 - 通知データ永続化機能-システム再起動時の通知回復機能の実装.md  (+29 more)
src/: api.rs  app.rs  auth_manager.rs  cli.rs  config.rs  errors.rs  github_client.rs  history_manager.rs  initialization_service.rs  initializer.rs  lib.rs  logger.rs  main.rs  models.rs  poller.rs  runtime.rs  shutdown.rs  state.rs  storage.rs  token_storage.rs  traits.rs  tui.rs  utils.rs
tests/: cli_test.rs  keychain_test.rs  notification_persistence_test.rs  persistent_notifications_test.rs
(+27 files in other folders)
