[package]
name = "gh-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
keyring = "2.0"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
url = "2.0"
base64 = "0.21"
notify-rust = "4.10"
mac-notification-sys = { version = "0.6", optional = true }
winrt-notification = { version = "0.5", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7.3"
rusqlite = { version = "0.31", features = ["bundled"] }
actix-web = "4.0"
actix-cors = "0.6"

[dev-dependencies]
tempfile = "3.0"
